--- a/frontend/src/app/components/home/calendar/calendar.component.scss
+++ b/frontend/src/app/components/home/calendar/calendar.component.scss
@@ -6,13 +6,14 @@
   letter-spacing: normal;
   color: #454545;
   font-weight: bold;
-  margin: 0 -35px;
+  margin: 0 -36px;
   text-align: center;
 }
 
 .list-group-item {
   border: none;
   color: #454545;
+  padding: 0.399rem 1.25rem;
 }
 
 @function grey($opacity) {
@@ -59,34 +60,4 @@
   max-height: 550px;
   box-shadow: 0 0 2.9px 0.1px rgba(0, 0, 0, 0.25);
   width: 291px;
-}
-
-.mwl-calendar-month-cell {
-  border: none !important;
-}
-
-.cal-cell .cal-day-cell .cal-future .cal-in-month .ng-star-inserted {
-  max-height: 60px!important;
-  text-align: center;
-  border: red!important;
-}
-
-.disabled-date{
-  opacity: .5;
-  background-color: #0074D9!important;
-  pointer-events: none;
-}
-
-.cal-month-view .cal-day-badge {
-  width: 8px;
-  height: 12px;
-  font-size: 13px;
-  font-weight: 500;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 4.92;
-  letter-spacing: normal;
-  text-align: right;
-  color: #373737;
-  background-color: green!important;
 }
