--- a/frontend/src/app/components/home/home.component.scss
+++ b/frontend/src/app/components/home/home.component.scss
@@ -150,3 +150,15 @@ table tbody tr td {
 .radio {
   width: 270px;
 }
+
+.pad-left41 {
+  padding-left: 41px;
+}
+
+.pad-right41 {
+  padding-right: 41px;
+}
+
+.width-100 {
+  width: 100%;
+}
