--- a/frontend/src/assets/css/angular-calendar.css
+++ b/frontend/src/assets/css/angular-calendar.css
@@ -4,7 +4,7 @@
 }
 
 .cal-month-view .cal-header .cal-cell {
-  padding: 5px 0;
+  padding: 0.3125rem 0;
   overflow: hidden;
   -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
@@ -18,7 +18,7 @@
 }
 
 .cal-month-view .cal-cell-top {
-  min-height: 78px;
+  min-height: 4.875rem;
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
@@ -55,7 +55,7 @@
 }
 
 .cal-month-view .cal-day-cell {
-  height: 80px;
+  height: 5rem;
   position: static;
 }
 
@@ -67,18 +67,18 @@
 
 .cal-month-view .cal-day-badge {
   display: inline-block;
-  min-width: 10px;
-  padding: 3px 7px;
-  font-size: 12px;
+  min-width: 0.625rem;
+  padding: 0.1875rem 0.4375rem;
+  font-size: 0.75rem;
   font-weight: 700;
   line-height: 1;
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
-  border-radius: 10px;
+  border-radius: 0.625rem;
   position: relative;
-  top: 44px;
-  left: 29px;
+  top: 2.75rem;
+  left: 1.8125rem;
 }
 
 .cal-month-view .cal-day-number {
@@ -86,36 +86,8 @@
   font-weight: 400;
   opacity: 0.5;
   color: #1f1f1f;
-  margin-top: 15px;
-  margin-right: 28px;
+  margin-right: 1.75rem;
   float: right;
-  margin-bottom: 10px;
-}
-
-.cal-month-view .cal-events {
-  display: none !important;
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  -webkit-box-align: end;
-  -ms-flex-align: end;
-  align-items: flex-end;
-  margin: 3px;
-  line-height: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  -js-display: flex;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-
-.cal-month-view .cal-event {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  display: inline-block;
-  margin: 2px;
 }
 
 .cal-month-view .cal-day-cell.cal-in-month.cal-has-events {
@@ -132,12 +104,12 @@
 /*  font-size: 1.9em; }*/
 
 .cal-month-view .cal-open-day-events {
-  padding: 15px;
+  padding: 0.9375rem;
 }
 
 .cal-month-view .cal-open-day-events .cal-event {
   position: relative;
-  top: 2px;
+  top: 0.125rem;
 }
 
 .cal-month-view .cal-out-month .cal-day-badge,
@@ -196,21 +168,14 @@
   background-color: #e0e0e0 !important;
 }
 
-.cal-month-view .cal-open-day-events {
-  color: #fff;
-  background-color: #555;
-  -webkit-box-shadow: inset 0 0 15px 0 rgba(0, 0, 0, 0.5);
-  box-shadow: inset 0 0 15px 0 rgba(0, 0, 0, 0.5);
-}
-
 /*00*/
 .cal-month-view .cal-day-cell {
   border: none !important;
 }
 
 .cal-month-view .cal-day-cell:active, .cal-month-view .cal-day-cell:focus {
-  width: 80px;
-  height: 80px;
+  width: 5rem;
+  height: 5rem;
   background-color: #f0d173 !important;
   border-radius: 50%;
   border: none!important;
@@ -218,8 +183,8 @@
 }
 
 .cal-month-view .cal-day-cell:hover {
-  width: 80px;
-  height: 80px;
+  width: 5rem;
+  height: 5rem;
   border-radius: 50%;
   border: none!important;
   outline: none!important;
@@ -227,8 +192,8 @@
 
 .cal-month-view .cal-day-cell.cal-today {
   background-color: #e8fde7;
-  width: 80px;
-  height: 80px;
+  width: 5rem;
+  height: 5rem;
 }
 
 .cal-cell-row:hover {
