--- a/frontend/src/app/components/objects/objects.component.scss
+++ b/frontend/src/app/components/objects/objects.component.scss
@@ -30,6 +30,10 @@
   color: #373737;
 }
 
+.accordion-header {
+  height: 50px;
+}
+
 .operation-type {
   border-radius: 0.3125rem;
   border: 1px solid #d0d0d0;
