--- a/frontend/src/app/components/objects/objects.component.html
+++ b/frontend/src/app/components/objects/objects.component.html
@@ -2,6 +2,9 @@
 <div class="row" [formGroup]="objectForm">
   <div class="col-sm">
     <div class="card">
+      <div class="card-header bg-dark text-white font-weight-bold">
+        Объекты
+      </div>
       <div class="card-body">
         <div class="row">
           <div class="col-sm">
@@ -189,14 +192,20 @@
     </div>
   </div>
 </div>
-<div class="row">
-  <div class="col-sm-4">
-    <button type="button" class="btn btn-sm all-objects text-center" *ngFor="let data of objectMy"
-            (click)="myObjectChange(data.value)">{{data.label}}</button>
+<div class="row disabled-bottom-margin">
+  <div class="col-sm-4 py-1">
+    <mat-button-toggle-group [(ngModel)]="myClaims">
+      <mat-button-toggle class="operation-type" (click)="filterBtnChange(item.value)"
+                         *ngFor="let item of objectMy" [value]="item" [id]="item.code"
+                         [class]="item.value != myClaims ? 'bg-white text-dark' : ''"
+                         [ngClass]="{ 'color-aqua text-white':item.value === myClaims}">
+        {{item.label}}
+      </mat-button-toggle>
+    </mat-button-toggle-group>
   </div>
   <div class="col-sm"></div>
-  <div class="col-sm"></div>
 </div>
+
 <div class="row" *ngIf="fromBoard">
   <div class="col-sm">
     <table class="table table-sm overflow-auto">
