--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -544,6 +544,7 @@
                       <ng-select
                         [items]="districts"
                         bindValue="value"
+                        [multiple]="isSell()"
                         [readonly]="isBuy()"
                         [(ngModel)]="applicationForm.districtId"
                         formControlName="districtId"
