--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -572,7 +572,7 @@
                       </div>
                     </div>
                     <div class="col-sm" *ngIf="isBuy()">
-                      <label class="form-label-v" translate>claim.numberHouse
+                      <label class="form-label-v">Номер дома
                         <span class="text-danger" *ngIf="!applicationForm.houseNumber">&nbsp;*</span>
                       </label>
                       <div class="input-group">
