--- a/frontend/src/app/components/claims/create-claim/claim-view/claim-view.component.scss
+++ b/frontend/src/app/components/claims/create-claim/claim-view/claim-view.component.scss
@@ -14,6 +14,13 @@
   color: #373737;
 }
 
+.operation-type2 {
+  width: 12.5rem;
+  border-radius: 0.3125rem;
+  border: 1px solid #d0d0d0;
+  margin-right: 0.3125rem;
+}
+
 .operation-type {
   border-radius: 0.3125rem;
   border: 1px solid #d0d0d0;
@@ -21,12 +28,38 @@
 }
 
 .operation-type-btn {
-  max-width: 120px;
-  min-width: 100px;
+  width: 8.5rem;
+  height: 36.2px;
+  border-radius: 0.3125rem;
+  border: 1px solid #d0d0d0;
+  margin-right: 0.3125rem;
 }
 
 textarea, textarea:focus {
   border: none;
   outline: none !important;
   border-bottom: 1px solid black;
+}
+
+@function aqua($opacity) {
+  @return rgba(0, 178, 168, $opacity)
+}
+
+.square-t {
+  background: aqua(0.1);
+  margin: 0 -20px;
+  padding: 10px 20px;
+}
+
+.expanded-search {
+  width: 263px;
+  height: 21px;
+  font-size: 20px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 0.9;
+  letter-spacing: normal;
+  text-align: center;
+  color: #373737;
 }
