--- a/frontend/src/assets/css/angular-calendar.css
+++ b/frontend/src/assets/css/angular-calendar.css
@@ -18,11 +18,11 @@
 }
 
 .cal-month-view .cal-cell-top {
-  min-height: 4.875rem;
+  min-height: 4.875rem!important;
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  border-radius: 50%;
+  border-radius: 50%!important;
 }
 
 .cal-month-view .cal-cell-row {
@@ -55,9 +55,10 @@
 }
 
 .cal-month-view .cal-day-cell {
-  height: 5rem;
-  min-height: 5rem;
-  max-height: 5rem;
+  max-width: 5rem!important;
+  min-width: 5rem!important;
+  min-height: 5rem!important;
+  max-height: 5rem!important;
   position: static;
 }
 
@@ -193,9 +194,12 @@
 }
 
 .cal-month-view .cal-day-cell.cal-today {
-  background-color: #e8fde7;
-  width: 5rem;
-  height: 5rem;
+  background-color: #e8fde7!important;
+  max-width: 5rem!important;
+  min-width: 5rem!important;
+  min-height: 5rem!important;
+  max-height: 5rem!important;
+  border-radius: 50%;
 }
 
 .cal-cell-row:hover {
