--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -19,6 +19,12 @@
         справочниками</a>  <a href="#" class="list-group-item list-group-item-action bg-dark" routerLink="/organizations" translate>Управление
         организациями</a>
     </div>
+
+    <a title="Вернуться к началу страницы" class="bottomMenu text-white" (click)="navigateTop()">
+      <i aria-hidden="true" class="fa fa-arrow-up fa-2x"></i>
+      <br/>
+    </a>
+
   </div>
   <div id="page-content-wrapper" class="page-content-wrapper">
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom" [hidden]="!currentUser">
