--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -27,7 +27,7 @@
 
   </div>
   <div id="page-content-wrapper" class="page-content-wrapper">
-    <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom" [hidden]="!currentUser">
+    <nav id="mainNavBar" class="navbar navbar-expand-lg navbar-light bg-white border-bottom" [hidden]="!currentUser">
       <button class="bg-transparent expand-btn-nav" id="menu-toggle"><i aria-hidden="true" class="fa fa-bars"></i></button>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
