--- a/frontend/src/app/components/profile/my-clients/client-card/client-card.component.html
+++ b/frontend/src/app/components/profile/my-clients/client-card/client-card.component.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="btn-group btn-breadcrumb">
           <a href="#" class="btn btn-primary"><i class="fa fa-home"></i></a>
-          <a (click)="backToPrev()" class="btn btn-primary">Назад</a>
+          <a  href="javascript:history.back()" class="btn btn-primary">Назад</a>
           <a class="btn btn-primary active">Карточка клиента</a>
 
         </div>
