--- a/frontend/src/app/components/claims/claims.component.html
+++ b/frontend/src/app/components/claims/claims.component.html
@@ -83,8 +83,8 @@
         <div class="row">
           <div class="expanded-search" (click)="expandedBlock()">
             Расширенный поиск
-            <i class="fa fa-angle-down fa-2x" *ngIf="!expanded" aria-hidden="true"></i>
-            <i class="fa fa-angle-up fa-2x" *ngIf="expanded" aria-hidden="true"></i>
+            <i class="fa fa-angle-down font-weight-bold" *ngIf="!expanded" aria-hidden="true"></i>
+            <i class="fa fa-angle-up font-weight-bold" *ngIf="expanded" aria-hidden="true"></i>
           </div>
         </div>
       </div>
