--- a/frontend/src/app/components/claims/create-claim/claim-view/claim-view.component.scss
+++ b/frontend/src/app/components/claims/create-claim/claim-view/claim-view.component.scss
@@ -63,3 +63,12 @@ textarea, textarea:focus {
   text-align: center;
   color: #373737;
 }
+
+.photoCarouselBlock {
+  width: 350px;
+  margin: 0 auto;
+}
+
+.map {
+  height: 485px;
+}
