--- a/frontend/src/app/components/objects/objects.component.html
+++ b/frontend/src/app/components/objects/objects.component.html
@@ -126,16 +126,16 @@
 
         </div>
         <div class="row" *ngIf="expanded">
-          <div class="col-sm">
+          <div class="col-sm-3">
             <label class="form-label-v">В залоге</label>
-            <div class="row test">
-              <div class="col-sm" *ngFor="let data of dicDynamic;">
-                <input type="radio" [id]="data.code" [name]="'zalog'"
-                       [value]="data.code" formControlName="zalog"
-                       [(ngModel)]="objectForm.zalog"/>
-                <label>&nbsp;{{data.label}}</label>
-              </div>
-            </div>
+            <mat-button-toggle-group [(ngModel)]="objectForm.zalog" formControlName="zalog" class="width-100">
+              <mat-button-toggle class="operation-type width-100" *ngFor="let item of dicDynamic"
+                                 [value]="item.code"
+                                 [class]="toStringCompare(item.code) != toStringCompare(objectForm.zalog) ? 'bg-white text-dark' : ''"
+                                 [ngClass]="{ 'color-aqua text-white':toStringCompare(item.code) === toStringCompare(objectForm.zalog)}">
+                {{item.label}}
+              </mat-button-toggle>
+            </mat-button-toggle-group>
           </div>
           <div class="col-sm">
             <label class="form-label-v">Площадь кухни</label>
@@ -154,8 +154,8 @@
         <div class="row">
           <div class="expanded-search" (click)="expandedBlock()">
             Расширенный поиск
-            <i class="fa fa-angle-down fa-2x" *ngIf="!expanded" aria-hidden="true"></i>
-            <i class="fa fa-angle-up fa-2x" *ngIf="expanded" aria-hidden="true"></i>
+            <i class="fa fa-angle-down font-weight-bold" *ngIf="!expanded" aria-hidden="true"></i>
+            <i class="fa fa-angle-up font-weight-bold" *ngIf="expanded" aria-hidden="true"></i>
           </div>
         </div>
       </div>
